src/style.sass
@import "./_variables"

@mixin flex-display($justify,$align,$direction)
  display: flex
  justify-content: $justify
  align-items: $align
  flex-direction: $direction

@mixin transparentButton()
  padding: 0
  border: none
  background: none
  @include flex-display(center,center,row)

@mixin base-button()
  padding: .5rem 1.5rem
  border: none
  border-radius: 20px
  color: $neutral-White
  background: linear-gradient(90deg, $primary-green 0%, $primary-cyan 100%)
  font-size: .625rem
  font-weight: $strong-weight
  &:hover
    background: linear-gradient(90deg, transparentize($primary-green, 0.25) 0%, transparentize($primary-cyan, 0.25) 100%)

*
  font-size: $size
  font-family: $font , sans-serif
  font-weight: $normal-weight
  box-sizing: border-box

button,li
  cursor: pointer

#app
  width: 100%
  height: 100vh

.header
  position: fixed
  top: 0
  z-index: 2
  background: $neutral-White
  padding: 1rem
  @include flex-display($justify:space-between,$align:center ,$direction:row )
  width: 100%
  height: 15%
  max-height: 75px
  .header__hamburguer
    width: 1.5625rem
    height: 1.5625rem
    @include transparentButton()
    ion-icon
      font-size: 1.5625rem
.menu
  transition: all .5s
  position: fixed
  background: $neutral-White
  top: 20%
  left: 50%
  transform: translateX(-50%)
  z-index: 10
  width: 90%
  padding: 1rem
  border-radius: 5px
  // box-shadow: 0px 50px 100px 0px transparentize(black,0.25 )
  .menu__close
    position: absolute
    @include transparentButton()
    right: 1%
    top: -38%
    width: 1.5625rem
    height: 1.5625rem
    z-index: 10
    ion-icon
      font-size: 1.5625rem
  .menu__list
    margin: 0
    padding: 0
    @include flex-display(normal,center,column)
    gap: 1rem
    .menu__item
      list-style: none
      color: $primary-blue
      font-weight: $light-weight
      font-size: 16px

.backdrop
  height: 100vh
  position: fixed
  background: transparentize(black,0.75 )
  top: 15%
  width: 100%
  left: 0
  z-index: 1

.main
  margin-top: 15%
  @include flex-display(normal,center,column)
  .presentation
    overflow: hidden
    position: relative
    padding: 1rem 1rem 5rem 1rem
    width: 100%
    @include flex-display(normal,center,column)
    .presentation__background
      width: 100%
      background: url("./assets/bg-intro-mobile.svg")
      position: absolute
      top: 0
      background-repeat: no-repeat
      background-position: center
      background-size: cover
      .presentation__image
        width: 100%
        transform: translateY(-115px)
    .presentation__info-container
      margin-top: 16rem
      @include flex-display(normal,center,column )
      text-align: center
      gap: 1rem
      .presentation__info-title
        color: $primary-blue
        margin: 2rem 0rem 0rem 0rem
      .presentation__info-description
        color: $neutral-GrayishBlue
        font-size: .6875rem
        line-height: 1.25rem
        margin: 0
      .presentation__button
        @include base-button()
  .features
    @include flex-display(normal,center,column)
    background: $neutral-LightGrayishBlue
    padding: 1rem 1rem 5rem 1rem
    .features__info-container
      @include flex-display(normal,center,column)
      text-align: center
      margin-bottom: 2rem
      .features__info-title
        color: $primary-blue
        font-size: 1.5rem
        margin: 0
      .features__info-description
        color: $neutral-GrayishBlue
        margin: 1rem 0rem
        font-size: .75rem
        line-height: 1.25rem
    .features__container
      @include flex-display(normal,center ,column )
      gap: 2rem
      .card
        @include flex-display(normal,center,column)
        text-align: center
        gap: 1rem
        .card__title
          margin: 0
          color: $primary-blue
        .card__description
          margin: 0
          color: $neutral-GrayishBlue
          font-size: .75rem
          line-height: 1.25rem
  .articles
    @include flex-display(normal,center,column)
    padding: 5rem 1rem
    background: $neutral-VeryLightGray
    .articles__title
      font-size: 1.5rem
      color: $primary-blue
    .articles__container
      @include flex-display(normal,center,column)
      width: 100%
      padding: 2rem 0rem
      gap: 1rem
      .article__item
        width: 100%
        border-radius: 10px
        @include flex-display(normal,flex-start,column )
        background: $neutral-White
        .article__item-image
          width: 100%
          border-radius: 10px 10px 0px 0px
        .article__info
          padding: 1rem
          .article__item-author
            color: $neutral-GrayishBlue
            font-size: .625rem
          .article__item-title
            font-size: .9375rem
            color: $primary-blue
          .article__item-description
            font-size: .75rem
            color: $neutral-GrayishBlue
      .article__item:hover
        cursor: pointer
        .article__item-title
          color: $primary-green
.footer
  @include flex-display(normal,center,column)
  padding: 2rem
  gap: 2rem
  background: $primary-blue
  .social__container
    @include flex-display(center,center,row )
    gap: .625rem
    .social__button
      @include transparentButton()
      ion-icon
        transition: all .3s
        color: $neutral-White
    .social__button:hover
      ion-icon
        color: $primary-green
        transition: all .3s
  .footer__links
    @include flex-display(normal,center,column)
    margin: 0
    padding: 0
    gap: 1rem
    .links__item
      list-style: none
      color: $neutral-VeryLightGray
      font-size: .75rem
      font-weight: $light-weight
      transition: all .2s
    .links__item:hover
      color: $primary-green
      transition: all .2s
  .footer__button
    @include base-button()
  .footer__copyright
    color: $neutral-GrayishBlue
    font-size: .75rem

.hidden-menu
  transition: all .5s
  opacity: 0
  transform: translate(-50% ,-500px)
.hidden
  transition: all .5s
  opacity: 0

